<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AutoLoanCalculatorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="270dp"
        android:background="@drawable/my_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="200dp"
            android:background="@drawable/my_border2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/auto_amount"
                android:layout_width="163dp"
                android:layout_height="64dp"
                android:layout_marginTop="50dp"
                android:background="@color/white"
                android:hint="@string/auto_label"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/auto_apr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/auto_amount_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="0.00"
                    android:textSize="18sp" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/auto_apr"
                android:layout_width="160dp"
                android:layout_height="64dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/white"
                android:hint="@string/apr_label"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/auto_payment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auto_amount">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/auto_apr_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="0.00"
                    android:textSize="18sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/auto_payment"
                android:layout_width="160dp"
                android:layout_height="64dp"
                android:background="@color/white"
                android:hint="@string/payment_label"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/radio_group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auto_apr">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/auto_payment_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="0.00" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/auto_button"
                android:layout_width="160dp"
                android:layout_height="54dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="11dp"
                android:layout_marginBottom="90dp"
                android:text="Button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="160dp"
                android:layout_height="53dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/auto_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/auto_payment">

                <RadioButton
                    android:id="@+id/radio_years"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="Years" />

                <RadioButton
                    android:id="@+id/radio_months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="Months"
                    app:layout_constraintEnd_toEndOf="parent" />
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/duration_view"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginTop="63dp"
            android:textAlignment="center"
            android:textColor="#07650B"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/duration_text" />

        <TextView
            android:id="@+id/interest_result_view"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_marginBottom="84dp"
            android:textAlignment="center"
            android:textColor="#07650B"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/interest_result"
            tools:text="@string/interest_view_text" />

        <TextView
            android:id="@+id/interest_view"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_marginTop="21dp"
            android:textAlignment="center"
            android:textColor="#07650B"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/interest_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/line"
            tools:text="@string/interest_text" />

        <TextView
            android:id="@+id/line"
            android:layout_width="178dp"
            android:layout_height="2dp"
            android:layout_marginStart="224dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="9dp"
            android:background="#E9DFF7"
            app:layout_constraintBottom_toTopOf="@+id/interest_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duration_debt" />

        <TextView
            android:id="@+id/duration_debt"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#07650B"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/my_duration_view"
            tools:text="@string/auto_debt_text" />

        <TextView
            android:id="@+id/my_duration_view"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="#07650B"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/duration_debt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/my_duration_result"
            tools:text="Year" />

        <TextView
            android:id="@+id/my_duration_result"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#029A08"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/my_duration_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/duration_view"
            tools:text="66" />

        <TextView
            android:id="@+id/interest_result"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textColor="#029A08"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/interest_result_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toBottomOf="@+id/interest_view"
            tools:text="$00.00" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/a_total_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textColor="#07650B"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
        tools:text="@string/auto_total_amount" />

    <TextView
        android:id="@+id/auto_total_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#029A08"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/a_total_amount"
        tools:text="$00.00" />

    <TextView
        android:id="@+id/final_payoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="#07650B"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/auto_total_amount"
        tools:layout_editor_absoluteX="176dp"
        tools:text="@string/auto_payoff_date" />

    <TextView
        android:id="@+id/auto_payoff_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="77dp"
        android:textAlignment="center"
        android:textColor="#029A08"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/final_payoff"
        tools:text="Date" />


</androidx.constraintlayout.widget.ConstraintLayout>