<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="75dp"
        android:text="@string/please_choose_a_calculator_to_use"
        android:textAlignment="center"
        android:textColor="#029A08"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Please choose a calculator to use" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <androidx.cardview.widget.CardView
            android:id="@+id/autoCardView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:onClick="autoLoan"
            app:cardBackgroundColor="#449136"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <ImageButton
                android:id="@+id/autoLoan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:onClick="autoLoan"
                android:backgroundTint="@color/background_color_image_button"
                android:paddingBottom="50dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_car"
                tools:srcCompat="@drawable/ic_car" />

            <TextView
                android:id="@+id/autoTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="160dp"
                android:text="@string/auto_loan_calculator"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="18sp" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/creditCardView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:onClick="creditCardLoan"
            app:cardBackgroundColor="#449136"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <ImageButton
                android:id="@+id/credit_card_loan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:onClick="creditCardLoan"
                android:backgroundTint="@color/background_color_image_button"
                android:paddingBottom="45dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_gcard"
                tools:srcCompat="@drawable/ic_gcard" />

            <TextView
                android:id="@+id/credit_textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="160dp"
                android:text="@string/credit_card_loan_calculator"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="18sp" />


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
